--- a/indx.html
+++ b/indx.html
@@ -103,10 +103,10 @@
 			/* For desktop: */
 			.col-1 {width: 8.33%;}
 			.col-2 {width: 16.66%;}
-			.col-3 {width: 47.8%;}
+			.col-3 {width: 50%;}
 			.col-4 {width: 33.33%;}
 			.col-5 {width: 41.66%;}
-			.col-6 {width: 100%;}
+			.col-6 {width: 97.8%;}
 			.col-7 {width: 58.33%;}
 			.col-8 {width: 66.66%;}
 			.col-9 {width: 50%;}
@@ -165,10 +165,10 @@
 		<div class="row">
 		<div class="col-3 col-s-3 menu">
 			<a href="" target="_blank">
-			<a href="file:///C:/Drivers/html/Sub-theme/Vehicles%20I%20dream%20of.html"><li> Vehicles I dream of... </li> </a>
-			<a href="file:///C:/Drivers/html/Sub-theme/Properties%20I%20want.html"><li> Properties I want... </li></a>
-			<a href="file:///C:/Drivers/html/Sub-theme/Countries%20I%20want%20to%20visit%20.html"><li> Countries I want to visit ...</li></a>
-			<a href="file:///C:/Drivers/html/Sub-theme/My%20goals%20for%20life!!!.html"><li>  My goals for life!!! </li></a>
+			<a href="https://mulichekol.github.io/Vehicles-I-dream-of/"><li> Vehicles I dream of... </li> </a>
+			<a href="https://mulichekol.github.io/Properties-I-want.index.html/"><li> Properties I want... </li></a>
+			<a href="https://mulichekol.github.io/Countries-I-want-to-visit-/"><li> Countries I want to visit ...</li></a>
+			<a href="https://mulichekol.github.io/My-goals-for-life-/"><li>  My goals for life!!! </li></a>
 		</ul>
 	  </div>
 
@@ -187,6 +187,6 @@
 			<p>"We have encouraged a culture of soft, weak and delicate human beings, unable to keep promises, who run away from responsibility and give up their ambitions as soon as they get stuck in the slightest obstacle." not me... </p>
 		</div>	
 		 
-		<p><h1>אתר זה נוצר לצורך עבודת הגשה </h1></p>
+		<h1>אתר זה נוצר לצורך עבודת הגשה </h1></p>
 	</body>
 </html>
